--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: dodgerblue !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.start-button {
+  width: 100% !important;
+  height: auto !important;
+  text-align: center;
+  color: white !important;
+  font-weight: 800 !important;
+}
+h1 {
+  color: white !important;
+  font-family: 'Pacifico', cursive !important;
+}
+
+.fullscreen {
+  height: 80vh !important;
 }
